# rag-platform-qwen3

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  codecov.yml  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  mirror.yml
configs/: default.yml
docker/fastapi/: Dockerfile
docker/grafana/dashboards/: dashboards.yml
docker/minio/: config.sh
docker/openbao/: config.hcl
docker/otel/: otel-collector.yml
docker/prometheus/: prometheus.yml
docker/prometheus/rules/: rag-alerts.yml
docker/qdrant/: config.yaml
docker/vllm/: docker-compose.gpu.yml
docs/: architecture.md  readme-badge-strategy.md  repository_strategy.md  security.md  spec.md
docs/issues/: badge-audit.md  readme-badge-audit.md
docs/ops/: disaster_recovery.md  runbooks.md
docs/prs/: readme-badges.md
evaluations/: __init__.py  runner.py
guardrails/: __init__.py  service.py
observability/: rag-dashboard.json
scripts/: backup.sh  restore.sh
src/api/: dependencies.py  models.py  routes.py
src/chunking/: __init__.py  engine.py
src/common/: __init__.py  config.py  token_counter.py
src/context/: __init__.py  reconstructor.py
src/embeddings/: __init__.py  service.py
src/generation/: service.py
src/generation/providers/: __init__.py  base.py  factory.py  openai_compat.py  openrouter.py  vllm.py
src/ingestion/: __init__.py  dedup.py  service.py
src/ingestion/parsers/: __init__.py  base.py  docx.py  markdown.py  pdf.py  txt.py
src/observability/: metrics.py  tracing.py
src/rag_platform_qwen3/: main.py
src/reranking/: __init__.py  service.py
src/retrieval/: __init__.py  hybrid.py
src/security/: __init__.py  secret_provider.py
src/security/providers/: __init__.py  env.py  openbao.py
src/vectorstore/: __init__.py  service.py
tests/api/: test_routes.py
tests/chunking/: test_engine.py
tests/common/: test_token_counter.py
tests/context/: test_reconstructor.py
tests/embeddings/: test_service.py
tests/evaluations/: test_runner.py
tests/generation/: test_providers.py
tests/guardrails/: test_service.py
tests/ingestion/: test_parsers.py
tests/observability/: test_metrics.py
tests/reranking/: test_service.py
tests/retrieval/: test_hybrid.py
tests/security/: test_secret_providers.py
tests/vectorstore/: test_service.py
